# reticulum_rn

./: .gitignore  PORTING_BEST_PRACTICES.md  README.md  setup.sh
expo-module/: ExpoReticulum.podspec  expo-module.config.json  jest.config.js  jest.setup.ts  package.json  pnpm-lock.yaml  tsconfig.json
expo-module/__tests__/: Reticulum.test.ts  useMesh.test.ts
expo-module/android/: build.gradle
expo-module/android/src/main/: AndroidManifest.xml
expo-module/android/src/main/kotlin/expo/modules/reticulum/: BLEManager.kt  ReticulumModule.kt  ReticulumPackage.kt
expo-module/android/src/main/kotlin/expo/modules/reticulum/service/: ReticulumForegroundService.kt
expo-module/example/: App.js  package-lock.json  package.json
expo-module/ios/: ExpoReticulum-Bridging-Header.h  ReticulumMobile.h  ReticulumModule.swift  build_rust_ios.sh
expo-module/ios/Frameworks/: .gitkeep
expo-module/src/: MeshScreen.tsx  index.ts  useMesh.ts
rust-core/: Cargo.toml  build.rs
rust-core/.cargo/: config.toml
rust-core/src/: ffi.rs  jni_bridge.rs  lib.rs  node.rs
